<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/template_android"
    android:gravity="center_vertical"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical" 
        android:layout_marginBottom="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:textColor="@color/white"
            android:text="@string/login_service" 
            />
        
        		 <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:layout_weight=".28"
                    android:background="@layout/spinner_border"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:layout_marginLeft="5dp"
                        />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:src="@drawable/drop" />

                </RelativeLayout>
                
<!-- 
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            />
             -->
    </LinearLayout>
	
    <LinearLayout
        android:id="@+id/host_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:textColor="@color/white"
            android:text="@string/login_host" />

        <EditText
            android:id="@+id/host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:capitalize="none"
            android:minWidth="250dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textSize="16sp"
            android:textColor="@color/dark_blue"
            />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/port_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:textColor="@color/white"
            android:text="@string/login_port" />

        <EditText
            android:id="@+id/port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:capitalize="none"
            android:minWidth="250dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textSize="16sp" 
            android:numeric="integer"
            android:textColor="@color/dark_blue"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/xmpp_service_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:textColor="@color/white"
            android:text="@string/login_xmpp_service" />

        <EditText
            android:id="@+id/xmpp_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:capitalize="none"
            android:minWidth="250dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textSize="16sp" 
            android:textColor="@color/dark_blue"/>
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:textColor="@color/white"
            android:text="@string/login_user" />

        <EditText
            android:id="@+id/userid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:capitalize="none"
            android:minWidth="250dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/default_userid"
            android:textSize="16sp" 
            android:textColor="@color/dark_blue"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:textColor="@color/white"
            android:text="@string/login_password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:capitalize="none"
            android:minWidth="250dp"
            android:password="true"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textSize="16sp" 
            android:textColor="@color/dark_blue"/>
    </LinearLayout>

    <Button
        android:id="@+id/ok"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/dark_blue"
        android:onClick="login"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="20sp" 
        />

</LinearLayout>